Added cards to work section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,95 @@
         </div>
       </div>
     </div>
+    <section class="container">
+      <h1>My Recent Works</h1>
+      <div class="row">
+        <div class="col">
+      <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <span class="badge bg-secondary">Ruby on rails</span>
+        <span class="badge bg-secondary">CSS</span>
+        <span class="badge bg-secondary">Javascript</span>
+        <span class="badge bg-secondary">HTML</span>
+        <button type="button" class="btn btn-success">See Project</button>
+    </div>
+  </div>
+</div>
+  <div class="col">
+<div class="card" style="width: 18rem;">
+<div class="card-body">
+  <h5 class="card-title">Card title</h5>
+  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  <span class="badge bg-secondary">Ruby on rails</span>
+  <span class="badge bg-secondary">CSS</span>
+  <span class="badge bg-secondary">Javascript</span>
+  <span class="badge bg-secondary">HTML</span>
+  <button type="button" class="btn btn-success">See Project</button>
+</div>
+</div>
+</div>
+  <div class="col">
+<div class="card" style="width: 18rem;">
+<div class="card-body">
+  <h5 class="card-title">Card title</h5>
+  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  <span class="badge bg-secondary">Ruby on rails</span>
+  <span class="badge bg-secondary">CSS</span>
+  <span class="badge bg-secondary">Javascript</span>
+  <span class="badge bg-secondary">HTML</span>
+  <button type="button" class="btn btn-success">See Project</button>
+</div>
+</div>
+</div>
+  <div class="col">
+<div class="card" style="width: 18rem;">
+<div class="card-body">
+  <h5 class="card-title">Card title</h5>
+  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  <span class="badge bg-secondary">Ruby on rails</span>
+  <span class="badge bg-secondary">CSS</span>
+  <span class="badge bg-secondary">Javascript</span>
+  <span class="badge bg-secondary">HTML</span>
+  <button type="button" class="btn btn-success">See Project</button>
+</div>
+</div>
+</div>
+  <div class="col">
+<div class="card" style="width: 18rem;">
+<div class="card-body">
+  <h5 class="card-title">Card title</h5>
+  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  <span class="badge bg-secondary">Ruby on rails</span>
+  <span class="badge bg-secondary">CSS</span>
+  <span class="badge bg-secondary">Javascript</span>
+  <span class="badge bg-secondary">HTML</span>
+  <button type="button" class="btn btn-success">See Project</button>
+</div>
+</div>
+</div>
+  <div class="col">
+<div class="card" style="width: 18rem;">
+<div class="card-body">
+  <h5 class="card-title">Card title</h5>
+  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  <span class="badge bg-secondary">Ruby on rails</span>
+  <span class="badge bg-secondary">CSS</span>
+  <span class="badge bg-secondary">Javascript</span>
+  <span class="badge bg-secondary">HTML</span>
+  <button type="button" class="btn btn-success">See Project</button>
+</div>
+</div>
+</div>
+</div>  
+  </section>
 
     <!-- Bootstrap Bundle with Popper -->
     <script
