added background final image

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
     <title>Hello, world!</title>
   </head>
-  <body
-    class="bg-image"
-    style="
-      background-image: url('https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp');
-      height: 400px;
-    "
-  >
+  <body>
+    <div
+  class="bg-image"
+  style="
+    background-image: url('bg-image.png');
+    height: 100vh;
+  "
+>
     <header class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -305,5 +306,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
   </body>
 </html>
